--- a/HelpWindow.xaml
+++ b/HelpWindow.xaml
@@ -13,11 +13,13 @@
                     1. Режим роботи
                 </Paragraph>
                 <Paragraph TextAlignment="Left" FontSize="15">
-                    При старті необхідно вибрати один із двох режимів роботи:
+                    При першому старті необхідно вибрати один із двох режимів роботи:
 
                     Server – у цьому режимі ваш комп'ютер фізично з'єднаний з комутатором.
 
                     Client – у цьому режимі ви керуєте комутатором через програму Server за допомогою UDP повідомлень.
+                    В подальшому програма буде стартувати в режимі який був при останньому використанні.
+                    Для зміни режиму здійснить подвійний клік миші по напису індікатора поточного режиму. 
 
                     Для налаштування UDP з'єднання використовуйте пункт меню "Settings - UDP Connection"
 
